# ChangeLog for media-gfx/blockdiag
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*blockdiag-1.1.3 (27 Feb 2012)

  27 Feb 2012; James Rowe <jnrowe@gmail.com> +blockdiag-1.1.3.ebuild:
  Version bump [556].

*blockdiag-1.1.2 (01 Feb 2012)

  01 Feb 2012; James Rowe <jnrowe@gmail.com> +blockdiag-1.1.2.ebuild:
  Version bump [517].

  20 Jan 2012; James Rowe <jnrowe@gmail.com> -blockdiag-0.9.6.ebuild,
  blockdiag-1.1.1.ebuild:
  Keyworded x86.

  20 Jan 2012; James Rowe <jnrowe@gmail.com> blockdiag-1.1.1.ebuild:
  Keyworded amd64.

*blockdiag-1.1.1 (21 Dec 2011)

  21 Dec 2011; James Rowe <jnrowe@gmail.com> +blockdiag-1.1.1.ebuild:
  Version bump [496].

  21 Nov 2011; James Rowe <jnrowe@gmail.com> -blockdiag-0.8.4.ebuild,
  -blockdiag-0.8.9.ebuild, blockdiag-0.9.6.ebuild:
  Keyworded x86.

  21 Nov 2011; James Rowe <jnrowe@gmail.com> blockdiag-0.9.6.ebuild:
  Keyworded amd64.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

*blockdiag-0.9.6 (22 Oct 2011)

  22 Oct 2011; James Rowe <jnrowe@gmail.com> +blockdiag-0.9.6.ebuild:
  Version bump [471].

  18 Sep 2011; James Rowe <jnrowe@gmail.com> blockdiag-0.8.9.ebuild:
  Keyworded x86.

  17 Sep 2011; James Rowe <jnrowe@gmail.com> blockdiag-0.8.9.ebuild:
  Keyworded amd64.

  14 Sep 2011; James Rowe <jnrowe@gmail.com> blockdiag-0.8.4.ebuild,
  blockdiag-0.8.9.ebuild:
  Added missing webcolors depend.

*blockdiag-0.8.9 (18 Aug 2011)

  18 Aug 2011; James Rowe <jnrowe@gmail.com> +blockdiag-0.8.9.ebuild:
  Version bump [444].

  08 Aug 2011; James Rowe <jnrowe@gmail.com> -blockdiag-0.8.1.ebuild,
  blockdiag-0.8.4.ebuild:
  Keyworded x86.

  08 Aug 2011; James Rowe <jnrowe@gmail.com> blockdiag-0.8.4.ebuild:
  Keyworded amd64.

  20 Jul 2011; James Rowe <jnrowe@gmail.com> blockdiag-0.8.1.ebuild,
  blockdiag-0.8.4.ebuild:
  QA: Minor quoting fixes.

*blockdiag-0.8.4 (09 Jul 2011)
