@@ -1,13 +1,12 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST blockdiag-1.1.1.tar.gz 128625 RMD160 d2e8689ef092a24b6681753995b33709c871b8a0 SHA1 d5c2942019f7c837531e44dc7384225993ecd497 SHA256 0882065af125e96e3f1c6a18f0275f68cc99d0148e3e8430e0c95cd889b16823
 DIST blockdiag-1.1.2.tar.gz 130895 RMD160 b71647e72d04866a4f93d076a8ad926a5f92a38a SHA1 e80439c01223cd6c9d7c139b5bc8fa6b72bb632b SHA256 3be7d80ba598a5ecdc99bb7b61ed74646c53848fa7d856373179e3618c82881e
 DIST blockdiag-1.1.3.tar.gz 131669 RMD160 870413d8c9a1e1bd153e082b849ebbdcc60b2bd2 SHA1 ba9c045e087d617b8061b7f7dc21d02babb354f2 SHA256 c76e6d3b1e04151fd791107cc46bc26e4f24e347ecafde0203e51029500b0c2d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk9L0GMACgkQzJrj3cAXR0nRgQCgnPNHcyQuYToS8mCfyEllKamO
-zTsAoKGB7PMvGw+9wPeK+dBioYUSPF0a
-=v6b4
+iEYEAREKAAYFAk9QxpwACgkQzJrj3cAXR0nY5QCfR0iSHzJPsTs45sSqlZVjyXNQ
+QgMAn2dP4aNK1ORtvxEG4RhTUtw6UoaA
+=KjQn
 -----END PGP SIGNATURE-----
