@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile install postinst postrm prepare test
-DEPEND=dev-python/setuptools dev-python/imaging >=app-admin/eselect-python-20091230 =dev-lang/python-2.7*
-DESCRIPTION=Generate block-diagram image files from text(like dot)
-EAPI=3
-HOMEPAGE=http://pypi.python.org/pypi/blockdiag/
-IUSE=examples pdf
-KEYWORDS=amd64 x86
-LICENSE=Apache-2.0
-RDEPEND=dev-python/funcparserlib dev-python/imaging dev-python/webcolors pdf? ( dev-python/reportlab ) >=app-admin/eselect-python-20091230 =dev-lang/python-2.7*
-SLOT=0
-SRC_URI=mirror://pypi/b/blockdiag/blockdiag-1.1.1.tar.gz
-_eclasses_=distutils	c8b0cab86443a130f3737ad1456d57d3	eutils	80d5ff61404a8ac834527cfb70ab2fae	jnrowe-pypi	ec904774b8c8477cdb89043eb65c764c	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	portability	536c5e70c5fb252ed3b769e04aa3f05b	python	06dff99bcab2fd584bd6d2aa6019ee19	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
-_md5_=043a098a3276d1b804b221f8c97b7905
