@@ -1,7 +1,6 @@
 REM 2012-03-02 *1 MSG %"Stabilise amd64 dev-python/misaka-0.4.2%" %a
 REM 2012-03-02 *1 MSG %"Stabilise amd64 dev-python/blessings-1.3%" %a
 REM 2012-03-02 *1 MSG %"Stabilise amd64 media-gfx/blockdiag-1.1.2%" %a
-REM 2012-03-02 *1 MSG %"Stabilise x86 media-gfx/blockdiag-1.1.2%" %a
 REM 2012-03-02 *1 MSG %"Stabilise amd64 dev-python/isodate-0.4.7%" %a
 REM 2012-03-02 *1 MSG %"Stabilise x86 dev-python/isodate-0.4.7%" %a
 REM 2012-03-02 *1 MSG %"Stabilise amd64 dev-util/cake-0.2.3%" %a
