@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  02 Mar 2012; James Rowe <jnrowe@gmail.com> -blockdiag-1.1.1.ebuild,
+  blockdiag-1.1.2.ebuild:
+  Keyworded x86.
+
 *blockdiag-1.1.3 (27 Feb 2012)
 
   27 Feb 2012; James Rowe <jnrowe@gmail.com> +blockdiag-1.1.3.ebuild:
